objects/Related_Learning_Board__c.object
<CustomObject>
    <description>Created: Veeresh Alur 
Date: 27/11/2013 
Capablity: ES Offering 
Release: 1 
Description: Intersection Object between Learning Board and Related Learning Board to support Many to Many relationships</description>
    <fields>
        <fullName>Display_Sequence_Nbr__c</fullName>
        <label>Display Sequence Nbr</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Learning_Board_ID__c</fullName>
        <label>Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>Related Learning Board</relationshipLabel>
        <relationshipName>Related_Learning_Board</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Learning_Board_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Learning Board ID</label>
        <referenceTo>Learning_Board__c</referenceTo>
        <relationshipLabel>Related Learning Board (Related Learning Board ID)</relationshipLabel>
        <relationshipName>Related_Learning_Board1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Related Learning Board</label>
    <nameField>
        <displayFormat>RLB-{0000000000}</displayFormat>
        <label>Related Learning Board ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Learning Boards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>